maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:11: error: not found: value get
  while (get(Y)!=0) {
         ^IslandMaze:11: error: not found: value Y
  while (get(Y)!=0) {
             ^